--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <html lag="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>After Society</title>
+		<title>Twitch Game Tools</title>
 		<link href="assets/favicon.ico" rel="icon" type="image/x-icon">
 		<style>
-		body {	text-align: center; }
+			body {
+				text-align: center;
+				background-color: black;
+			}
 		</style>
 		<script src="libs/phaser.min.js"></script>
 	</head>
 
 	<body>
+		<script src="scripts/commands.js"></script>
 		<script src="scripts/stage.js"></script>
+		<script src="scripts/players.js"></script>
 		<script src="scripts/scenes.js"></script>
 		<script src="scripts/config.js"></script>
 	</body>
