Completed JSON converter

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			}
 		</style>
 		<script src="libs/phaser.min.js"></script>
+		<script src="libs/jquery-3.4.1.min.js"></script>
 	</head>
 
 	<body>
